# rayluno

./: .env.example  .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
docs/: ARCHITECTURE_AR.md  BUILD_WEEK_DEMO_SCRIPT.md  DEVPOST_SUBMISSION_DRAFT.md  FINAL_JUDGE_SCRIPT.md  FINAL_PRODUCT_AUDIT.md  JUDGE_DEMO_STORYBOARD.md  LICENSING_AR.md  PERSONAL_MEMORY.md  PERSONAL_TASKS.md  PRODUCT_STRATEGY_AR.md  PRODUCT_VISION.md  RAYLUNO_DEVPOST_DRAFT.md  RELEASE_READINESS_AR.md  REMINDERS_AND_AGENDA.md  ROADMAP.md  SECURITY_AUDIT_2026-07-20.md  SECURITY_MODEL.md  SECURITY_PRIVACY_AR.md  UI_DIRECTION.md  UPDATES_AR.md  VERIFIED_SKILLS.md  VERIFIED_WORKFLOWS.md  VNEXT_ARCHITECTURE.md
packaging/: INSTALLER.md  MSIX.md  NSIS_NOTICE.txt  future_assistant.iss  future_assistant.manifest  future_assistant.nsi  future_assistant.spec  version_info_cli.txt  version_info_gui.txt  windows_launcher.py
scripts/: build-installer.ps1  build-msix.ps1  build-release.ps1  install-arabic-wake-model.ps1  install-english-wake-model.ps1  remix-final-video.ps1  run.ps1  setup.ps1  smoke-release.ps1  start-judge-demo.ps1
tests/: test_activation.py  test_audit_cli.py  test_authenticated_checkpoint_contract.py  test_automation_confirmation.py  test_automation_engine.py  test_automation_models.py  test_automation_registry.py  test_bootstrap.py  test_capability_policy.py  test_capability_policy_precedence.py  test_command_understanding.py  test_competition_ui_polish.py  test_desktop_api.py  test_doctor.py  test_entitlements.py  test_final_judge_polish.py  test_identity.py  test_judge_demo.py  test_licensing_store.py  test_licensing_tool.py  test_licensing_verifier.py  test_localization.py  test_media.py  test_memory_desktop.py  test_memory_ui_contract.py  test_router.py  (+37 more)
(+125 files in other folders)
